Add SEO components and enhance project structure for better performance and deployment
- Introduced SEO component for dynamic meta tags across pages to improve search engine optimization.
- Updated index.html with comprehensive meta tags for better visibility and sharing on social media.
- Added .vercelignore and vercel.json for optimized deployment on Vercel.
- Enhanced PROJECT_STRUCTURE.md to reflect new component organization and guidelines.
- Included favicon, manifest, robots.txt, and sitemap.xml for PWA support and SEO.
- Improved overall project documentation and structure for clarity and maintainability.

--- a/index.html
+++ b/index.html
@@ -1,14 +1,103 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sign Language Translation System</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
-</html>
 
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Primary Meta Tags -->
+  <title>KSLTS</title>
+  <meta name="title" content="KSLTS" />
+  <meta name="description"
+    content="An AI-powered web application that translates Khmer sign language gestures into readable text and speech in real-time. Built to support communication between signers and non-signers across Cambodia." />
+  <meta name="keywords"
+    content="sign language, Khmer sign language, gesture recognition, AI translation, accessibility, real-time translation, computer vision, machine learning, Cambodia, deaf community" />
+  <meta name="author" content="Capstone Group 15 - Data Science & Computer Science Department" />
+  <meta name="robots" content="index, follow" />
+  <meta name="language" content="English" />
+  <meta name="revisit-after" content="7 days" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://khmer-sign-language-translation-sys.vercel.app/" />
+  <meta property="og:title" content="KSLTS" />
+  <meta property="og:description"
+    content="An AI-powered web application that translates Khmer sign language gestures into readable text and speech in real-time. Built to support communication between signers and non-signers across Cambodia." />
+  <meta property="og:image" content="https://khmer-sign-language-translation-sys.vercel.app/favicon.png" />
+  <meta property="og:site_name" content="KSLTS" />
+  <meta property="og:locale" content="en_US" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://khmer-sign-language-translation-sys.vercel.app/" />
+  <meta property="twitter:title" content="KSLTS" />
+  <meta property="twitter:description"
+    content="An AI-powered web application that translates Khmer sign language gestures into readable text and speech in real-time." />
+  <meta property="twitter:image" content="https://khmer-sign-language-translation-sys.vercel.app/favicon.png" />
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="/favicon.png" />
+  <link rel="apple-touch-icon" href="/favicon.png" />
+
+  <!-- Web App Manifest -->
+  <link rel="manifest" href="/manifest.json" />
+
+  <!-- Theme Color -->
+  <meta name="theme-color" content="#0c0c0c" />
+  <meta name="msapplication-TileColor" content="#0c0c0c" />
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://khmer-sign-language-translation-sys.vercel.app/" />
+
+  <!-- Structured Data (JSON-LD) -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebApplication",
+      "name": "Khmer Sign Language Translation System",
+      "alternateName": "KSLTS",
+      "url": "https://khmer-sign-language-translation-sys.vercel.app",
+      "description": "An AI-powered web application that translates Khmer sign language gestures into readable text and speech in real-time.",
+      "applicationCategory": "AccessibilityApplication",
+      "operatingSystem": "Web Browser",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "USD"
+      },
+      "creator": {
+        "@type": "Organization",
+        "name": "Capstone Group 15",
+        "description": "Data Science Specialization and Computer Science Department"
+      },
+      "featureList": [
+        "Real-time gesture recognition",
+        "Text-to-speech conversion",
+        "Multi-gesture support (120+ signs)",
+        "Secure processing",
+        "User-friendly interface"
+      ],
+      "screenshot": "https://khmer-sign-language-translation-sys.vercel.app/favicon.png"
+    }
+    </script>
+
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "Khmer Sign Language Translation System",
+      "url": "https://khmer-sign-language-translation-sys.vercel.app",
+      "logo": "https://khmer-sign-language-translation-sys.vercel.app/favicon.png",
+      "sameAs": [
+        "https://github.com/Phal-Sovandy/Khmer-Sign-Language-Translation-System-Web"
+      ]
+    }
+    </script>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="./src/main.jsx"></script>
+</body>
+
+</html>
